--- a/css/main.css
+++ b/css/main.css
@@ -115,7 +115,6 @@ img {
 }
 
 .main {
-  position: relative;
   border-bottom: 1px solid #ECECEC;
 }
 
@@ -146,85 +145,6 @@ img {
   color: #212121;
 }
 
-.page-header__menu {
-  text-align: center;
-}
-
-@media screen and (max-width: 767px) {
-  .page-header__menu {
-    display: none;
-    position: absolute;
-    padding: 48px 40px;
-    top: 100%;
-    left: 0;
-    width: 100%;
-    height: 100vh;
-    background-color: #FFFFFF;
-    -webkit-box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.04), 0px 2px 4px rgba(0, 0, 0, 0.08), 0px 1px 3px rgba(0, 0, 0, 0.16);
-            box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.04), 0px 2px 4px rgba(0, 0, 0, 0.08), 0px 1px 3px rgba(0, 0, 0, 0.16);
-  }
-  .page-header__menu.is-open {
-    display: block;
-  }
-}
-
-@media screen and (min-width: 768px) {
-  .page-header__menu {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    height: 80px;
-  }
-}
-
-@media screen and (min-width: 1200px) {
-  .page-header__menu {
-    width: 100%;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-  }
-}
-
-.page-header__button {
-  display: -webkit-inline-box;
-  display: -ms-inline-flexbox;
-  display: inline-flex;
-  margin: 0;
-  margin-left: auto;
-  padding: 0;
-  border: none;
-  background-color: transparent;
-  background-position: center;
-  background-size: contain;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
-@media screen and (min-width: 768px) {
-  .page-header__button {
-    display: none;
-  }
-}
-
-.button .button__cross {
-  display: none;
-}
-
-.button.is-open .button__cross {
-  display: block;
-}
-
-.button.is-open .button__menu {
-  display: none;
-}
-
-.page-header__icon {
-  width: 19px;
-  height: 19px;
-}
-
 .page-header__logo {
   color: #2196F3;
   font-family: Raleway, sans-serif;
@@ -243,20 +163,14 @@ img {
 }
 
 .site-nav {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-}
-
-@media screen and (max-width: 767px) {
-  .site-nav {
-    display: block;
-    text-align: start;
-  }
+  display: none;
 }
 
 @media screen and (min-width: 768px) {
   .site-nav {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
     margin-left: 88px;
   }
 }
@@ -291,21 +205,8 @@ img {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-@media screen and (max-width: 767px) {
-  .site-nav__link {
-    padding-bottom: 0px;
-  }
-}
-
 .site-nav__link:hover, .site-nav__link:focus {
   color: #2196F3;
-}
-
-@media screen and (max-width: 767px) {
-  .site-nav__link {
-    font-size: 40px;
-    line-height: 1.17;
-  }
 }
 
 .site-nav__link--active {
@@ -318,13 +219,6 @@ img {
   color: #2196F3;
 }
 
-@media screen and (max-width: 767px) {
-  .site-nav__link--active {
-    font-size: 40px;
-    line-height: 1.17;
-  }
-}
-
 .site-nav__link--active::before {
   position: absolute;
   content: "";
@@ -335,41 +229,16 @@ img {
   background-color: #2196F3;
 }
 
-@media screen and (max-width: 767px) {
-  .site-nav__link--active::before {
-    display: none;
-  }
-}
-
 .contacts {
-  display: block;
+  display: none;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
 }
 
-@media screen and (max-width: 767px) {
-  .contacts {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: reverse;
-        -ms-flex-direction: column-reverse;
-            flex-direction: column-reverse;
-    -ms-flex-line-pack: start;
-        align-content: flex-start;
-    -webkit-box-align: start;
-        -ms-flex-align: start;
-            align-items: flex-start;
-    margin-top: 270px;
-  }
-}
-
 @media screen and (min-width: 768px) and (max-width: 1199px) {
   .contacts {
+    display: block;
     margin-top: 21px;
     margin-bottom: 21px;
     margin-right: 15px;
@@ -383,12 +252,6 @@ img {
     display: -ms-flexbox;
     display: flex;
     margin-left: auto;
-  }
-}
-
-@media screen and (max-width: 767px) {
-  .contacts__item {
-    margin-top: 32px;
   }
 }
 
@@ -432,23 +295,6 @@ img {
   color: #2196F3;
 }
 
-@media screen and (max-width: 767px) {
-  .contacts__link {
-    font-size: 24px;
-    line-height: 1.17;
-  }
-}
-
-@media screen and (max-width: 767px) {
-  .contacts__link--tel {
-    font-weight: 500;
-    font-size: 34px;
-    line-height: 1.18;
-    letter-spacing: 0.02em;
-    color: #2196F3;
-  }
-}
-
 .contacts__icon {
   display: -webkit-inline-box;
   display: -ms-inline-flexbox;
@@ -460,13 +306,116 @@ img {
   fill: currentColor;
 }
 
-@media screen and (max-width: 767px) {
-  .contacts__icon {
+.mob-menu {
+  position: fixed;
+  width: 100vw;
+  height: 100vh;
+  z-index: 1;
+  padding-top: 48px;
+  padding-bottom: 48px;
+  padding-left: 40px;
+  top: 0;
+  left: 0;
+  background-color: #FFFFFF;
+  -webkit-box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.04), 0px 2px 4px rgba(0, 0, 0, 0.08), 0px 1px 3px rgba(0, 0, 0, 0.16);
+          box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.04), 0px 2px 4px rgba(0, 0, 0, 0.08), 0px 1px 3px rgba(0, 0, 0, 0.16);
+}
+
+.mob-menu .container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  height: 100%;
+  overflow-y: auto;
+}
+
+@media screen and (min-width: 768px) {
+  .mob-menu {
     display: none;
   }
 }
 
-.soc {
+.menu-open-btn,
+.menu-close-btn {
+  display: block;
+  margin: 0;
+  margin-left: auto;
+  padding: 0;
+  border: none;
+  background-color: transparent;
+  background-position: center;
+  background-size: contain;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+@media screen and (min-width: 768px) {
+  .menu-open-btn,
+  .menu-close-btn {
+    display: none;
+  }
+}
+
+.mob-menu__item {
+  margin-bottom: 32px;
+}
+
+.mob-menu__link {
+  display: block;
+  font-weight: 500;
+  font-size: 40px;
+  line-height: 1.17;
+  letter-spacing: 0.02em;
+  text-decoration: none;
+  color: #212121;
+  -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.mob-menu__link:hover, .mob-menu__link:focus {
+  color: #2196F3;
+}
+
+.mob-menu__link--active {
+  font-weight: 500;
+  font-size: 40px;
+  line-height: 1.17;
+  letter-spacing: 0.02em;
+  text-decoration: none;
+  color: #2196F3;
+}
+
+.mob-contacts__link {
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  color: #757575;
+  background-color: #FFFFFF;
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 1.17;
+  letter-spacing: 0.02em;
+  text-decoration: none;
+}
+
+.mob-contacts__link--tel {
+  margin-bottom: 32px;
+  font-weight: 500;
+  font-size: 34px;
+  line-height: 1.18;
+  letter-spacing: 0.02em;
+  color: #2196F3;
+}
+
+.mob-soc {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -477,18 +426,18 @@ img {
 }
 
 @media screen and (min-width: 768px) {
-  .soc {
+  .mob-soc {
     display: none;
   }
 }
 
 @media screen and (min-width: 768px) {
-  .soc__item {
+  .mob-soc__item {
     display: none;
   }
 }
 
-.soc__link {
+.mob-soc__link {
   padding-left: 10px;
   padding-right: 10px;
   font-weight: 500;
@@ -502,7 +451,11 @@ img {
           transform: rotate(90deg);
 }
 
-.soc__link:last-child {
+.mob-soc__link:first-child {
+  padding-left: 0;
+}
+
+.mob-soc__link:last-child {
   border: none;
 }
 
