--- a/sass/components/_page-header.scss
+++ b/sass/components/_page-header.scss
@@ -1,5 +1,5 @@
 .main {
-    position: relative;
+    // position: relative;
     border-bottom: 1px solid #ECECEC; 
 
     // @media screen and (max-width:767px) {
@@ -27,72 +27,59 @@
     color: $title-text-color;
 }
 
-.page-header__menu {
-    text-align: center;
+// .page-header__menu {
+//     text-align: center;
     
     
-    @media screen and (max-width:767px) {
-        display: none; 
-        position: absolute;
+//     @media screen and (max-width:767px) {
+//         display: none; 
+//         position: absolute;
 
-        padding: 48px 40px;
+//         padding: 48px 40px;
         
-        top: 100%;
-        left: 0;
-        width: 100%;
-        height: 100vh;
-        background-color: $primary-bgc-color;
-        box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.04),
-                0px 2px 4px rgba(0, 0, 0, 0.08),
-                0px 1px 3px rgba(0, 0, 0, 0.16);
+//         top: 100%;
+//         left: 0;
+//         width: 100%;
+//         height: 100vh;
+//         background-color: $primary-bgc-color;
+//         box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.04),
+//                 0px 2px 4px rgba(0, 0, 0, 0.08),
+//                 0px 1px 3px rgba(0, 0, 0, 0.16);
 
-        &.is-open {
-                display: block;
-            }
-    }
+//         &.is-open {
+//                 display: block;
+//             }
+//     }
 
-    @media screen and (min-width:768px) {
-        display: flex;
-        height: 80px;
-    }
+//     @media screen and (min-width:768px) {
+//         display: flex;
+//         height: 80px;
+//     }
 
-    @media screen and (min-width:1200px) {
-        width: 100%;
-        display: flex;
-    }
-}
-.page-header__button {
-    display: inline-flex;
-    margin: 0;
-    margin-left: auto;
-    padding: 0;
-    border: none;
-    background-color: transparent;
-    background-position: center;
-    background-size: contain;
-    align-items: center;
+//     @media screen and (min-width:1200px) {
+//         width: 100%;
+//         display: flex;
+//     }
+// }
 
-    @media screen and (min-width: 768px) {
-        display: none;
-        }
-}
 
-.button {
-    & .button__cross {
-        display: none;
-    }
 
-    &.is-open .button__cross {
-        display: block;
-    }
+// .button {
+//     & .button__cross {
+//         display: none;
+//     }
 
-    &.is-open .button__menu {
-        display: none;
-    }
-}
+//     &.is-open .button__cross {
+//         display: block;
+//     }
 
-.page-header__icon {
-width: 19px;
-height: 19px;
-}
+//     &.is-open .button__menu {
+//         display: none;
+//     }
+// }
+
+// .page-header__icon {
+// width: 19px;
+// height: 19px;
+// }
 
