--- a/sass/components/_site-nav.scss
+++ b/sass/components/_site-nav.scss
@@ -1,12 +1,13 @@
 .site-nav {
-    display: flex;
+    display: none;
 
-    @media screen and (max-width:767px) {
-        display: block;
-        text-align: start;
-        }
+    // @media screen and (max-width:767px) {
+    //     display: block;
+    //     text-align: start;
+    //     }
     
     @media screen and (min-width:768px) {
+        display: flex;
         margin-left: 88px;
         }
 
@@ -26,10 +27,6 @@
 }
 
 .site-nav__link {
-  @media screen and (max-width:767px) {
-    padding-bottom: 0px;
-  }
-
     display: block;
     padding-top: 32px;
     padding-bottom: 32px;
@@ -47,11 +44,6 @@
     &:hover, &:focus {
         color: $accent-color;
     }
-
-    @media screen and (max-width:767px) {
-        font-size: 40px;
-        line-height: 1.17;
-        }
 }
 
 .site-nav__link--active {
@@ -64,11 +56,6 @@
     text-decoration: none;
 
     color: $accent-color;
-
-    @media screen and (max-width:767px) {
-            font-size: 40px;
-            line-height: 1.17;
-        }
 }
 
 .site-nav__link--active::before {
@@ -82,7 +69,7 @@
 
     background-color: $accent-color;
 
-    @media screen and (max-width:767px) {
-        display: none;
-        }
+    // @media screen and (max-width:767px) {
+    //     display: none;
+    //     }
 }
