--- a/sass/components/_contacts.scss
+++ b/sass/components/_contacts.scss
@@ -6,8 +6,7 @@
         display: block;
         margin-top: 21px;
         margin-bottom: 21px;
-        margin-right: 15px;
-        margin-left: 21px;
+        margin-left: auto;
         }
 
     @media screen and (min-width: 1200px) {
@@ -23,7 +22,7 @@
 
             &:last-child {
                 margin-bottom: 0px;
-                margin-left: 40px;
+                // margin-left: 40px;
                 }
 
         }
