--- a/sass/utils/_vars.scss
+++ b/sass/utils/_vars.scss
@@ -59,3 +59,9 @@ img {
     height: auto;
     max-width: 100%;
 }
+
+.is-hidden {
+    visibility: hidden;
+    opacity: 0;
+    pointer-events: none;
+  }
